Fixed some browser compatibility stuff regarding flexbox gaps

--- a/heroic-tour/src/styles.css
+++ b/heroic-tour/src/styles.css
@@ -45,7 +45,11 @@ a:visited {
 header nav {
     display: flex;
     flex-flow: row nowrap;
-    gap: 1em;
+
+}
+
+header nav a {
+    margin-right: 1em;
 }
 
 input {
